# cancer-clinical-test

./: --fail-under=95  .gitignore  .pre-commit-config.yaml  README.md  data.dvc  dvc.yaml  metrics.csv  models.dvc  outputs.dvc  params.yml  pyproject.toml  test_train_model.py
.dvc/: config
.github/workflows/: test_code.yaml  test_code.yml
config/: main.yaml
config/process/: process1.yaml  process2.yaml
data/processed/: X_test.csv  X_train.csv  y_test.csv  y_train.csv
docs/: tests_process_doc.md
mlruns/451279204975469772/: meta.yaml
mlruns/451279204975469772/194075c8f5954523ba241a0fb30cef50/: meta.yaml
mlruns/451279204975469772/194075c8f5954523ba241a0fb30cef50/metrics/: accuracy  accuracy_score  f1-score  f1_score
mlruns/451279204975469772/194075c8f5954523ba241a0fb30cef50/params/: features
mlruns/451279204975469772/194075c8f5954523ba241a0fb30cef50/tags/: mlflow.log-model.history  mlflow.runName
mlruns/451279204975469772/371a2441d4f548aaba2e6df66e040abf/: meta.yaml
mlruns/451279204975469772/371a2441d4f548aaba2e6df66e040abf/metrics/: accuracy  accuracy_score  f1-score  f1_score
mlruns/451279204975469772/371a2441d4f548aaba2e6df66e040abf/tags/: mlflow.log-model.history  mlflow.runName
mlruns/451279204975469772/f9650352cbf84202884154c72ceb375c/: meta.yaml
models/: xgboost
notebooks/: EDA.ipynb  EDA.py
outputs/2023-10-17/13-39-34/.hydra/: hydra.yaml
tests/: README.md  __init__.py  test_process.py  test_train_model.py  test_train_model_doc.md  tests_process_doc.md
training/: evaluate_model.py  helper.py  main.py  process.py  train_model.py
(+49 files in other folders)
