[tool.poetry]
name = "clinical-cancer-test"
version = "0.1.0"
description = ""
authors = ["GitHubAlejandroDR <alejandrodominguezrecio@uma.es>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "1.4.1"
hydra-core = "^1.3.2"
scikit-learn = "^1.3.1"
pip = "^23.3"
ipykernel = "^6.25.2"
patsy = "^0.5.3"
hyperopt = "^0.2.7"
xgboost = "^2.0.0"
mlflow = "^2.7.1"
helper = "^2.5.0"
dagshub = "^0.3.8.post1"
waitress = "^2.1.2"
numpy = "^1.26.1"
dvc = "^3.27.0"
pandera = "^0.17.2"
pytest-steps = "^1.8.0"
deepchecks = "0.12"
pytest = "^7.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
